# KajovoNG

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  FILESDAG.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  _tmp_parse.py  api_logic.py  audit_06_deleted_remote_branches.txt  audit_07_status_post.txt  fetch_missing_files.py  fix_env.ps1  kajovo_settings.example.json  merge_summary.json  pyproject.toml  requirements-dev.txt  requirements.txt  startspend.bat  ui_main.py  zip.ps1
_ai_delivery/: 00_forenzni_audit.md  01_source_of_truth_matrix.md  02_test_strategy.md  03_remediation_plan.md  04_performance_plan.md  05_logging_forensics_plan.md  06_progress_ui_plan.md  07_documentation_gap_report.md  08_machine_readable_findings.json  10_change_report.md  11_test_report.md  12_performance_report.md  13_logging_schema.md  14_progress_dialog_catalog.md  15_encoding_fixes.md  16_openai_truth_proof.md  17_ocr_truth_proof.md  18_db_persistence_truth_proof.md  20_final_verification_report.md  21_full_test_results.md  22_truth_source_attestation.md  23_forensic_log_walkthrough.md  24_release_notes.md  25_known_limits.md  26_file_manifest_with_checksums.txt  27_no_fake_paths_proof.md  30_hardening_pass_report.md  31_last_risks_matrix.md  32_final_confidence_statement.md  33_openai_network_update.md
_diag_test/: CHANGELOG_last_actions.txt  MANIFEST.md  README_problem.md
_skill_runs/: ui_inventory.json  ui_inventory.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CROSS_PLATFORM_FORENSIC_ANALYSIS.md  FORENSIC_AUDIT_REPORT.md  REQUIRED_FIXES_ROADMAP.md  (+11 more)
(+240 files in other folders)
